--- a/WebBellwether.Web/index.html
+++ b/WebBellwether.Web/index.html
@@ -91,6 +91,7 @@
     <script src="app/jokes/managementJokeCategoriesController.js"></script>
     <script src="app/jokes/managementJokesController.js"></script>
     <script src="app/languages/managementLanguagesController.js"></script>
+    <script src="app/search/searchController.js"></script>
 
     <!-- Load custom filters -->
     <script src="app/filters/customFilters.js"></script>
@@ -109,7 +110,6 @@
                 $('.menu').removeClass('fixed');
             }
         });
-
     </script>
 </body>
 </html>
