--- a/WebBellwether.Web/app/integrationGames/integrationGames.html
+++ b/WebBellwether.Web/app/integrationGames/integrationGames.html
@@ -1,31 +1,10 @@
 ﻿<div class="container">
     <h1>{{translation.IntegrationGamesHeader}}</h1>
     <div class="row" style="bottom: -100px;top:50px">
-        <!--<div>
-            <label>Search:</label> <input type="text" ng-model="search.gameName" ng-change="updateSearch()" placeholder="Search" />
-            <br />-->
-
-            <!--<label>Filter by Category:</label>
-            <ul>
-                <li><a href="" ng-click="search.category='engineering'">Engineering</a></li>
-                <li><a href="" ng-click="search.category='management'">Management</a></li>
-                <li><a href="" ng-click="search.category='business'">Business</a></li>
-            </ul>
-
-            <label>Filter by Branch:</label>
-            <ul>
-                <li><a href="" ng-click="search.branch='West'">West</a></li>
-                <li><a href="" ng-click="search.branch='East'">East</a></li>
-            </ul>
-
-            <p>
-                <strong><a href="" ng-click="resetFilters()">Show All</a></strong>
-            </p>-->
-        <!--</div>-->
         <div ng-repeat="g in filtered = (integrationGames | filter:search | startFrom:(currentPage -1)*entryLimit | limitTo:entryLimit)">
             <div class="animatedParent col-md-6">
                 <h1 class="animated bounceIn">{{g.gameName}}</h1>
-                <p class="animated lightSpeedInLeft">{{g.gameDescription}}</p>
+                <p class="animated lightSpeedInLeft go">{{g.gameDescription}}</p>
                 <p></p>
                 <div class="animated fadeInRight slow go" ng-repeat="gf in g.integrationGameDetailModels">
                     <p>{{gf.gameFeatureName}} : {{gf.gameFeatureDetailName}}</p>
